# MSP432-USING-GCC

./: CMakeLists.txt  README.md  openocd.cfg  startup_msp432p401r_gcc.c
